 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.10rc1

..F....... [ZBX-4391] fixed problem with suffixes support (slava)
.......PS. [ZBX-4376] fixed escaping of strings with PostgreSQL 9.1 or later (Sasha)
..F....... [ZBX-2419] fixed calculation of SLA if uptime/downtime is specified (Sasha)
..F....... [ZBX-3074] in item and trigger list move status column to the right (slava)
A......... [ZBX-3104] implemented the screen item API (pavels)
A.F....... [ZBX-3104] fixed screen item "Parameter" field validation and some minor screen item bugs (pavels)
........S. [ZBX-4298] added deleted data report to a housekeeper on every step (dimir)
..F....... [ZBX-3649] fixed "frontends/php/styles/ie_default.css" doesn't exist (for IE6) (sanja)
A.F....... [ZBX-4235] fixed operations with decimal numbers for certain locales (pavels)
..F....... [ZBX-3244] fixed dropdown changing its style when navigating menu (sanja)
A.F....... [ZBX-4015] fixed multiple XSS issues (pavels)
A.F....... [ZBX-4288] fixed user macros not being deleted when deleting a host (pavels)
A.F....... [ZBX-2859] fixed possibility to successfully delete zero regular expressions (sanja)
..F....... [ZBX-2843] made dashboard and slideshow popup menus have dynamic width (sanja)
A.F....... [ZBX-4279] added an error message when trying to delete an item, that's being used as a min/max Y axis value for graphs (pavels)
..F....... [ZBX-4375] updated Russian translation; thanks to Alexey Pustovalov (Richlv)
........S. [ZBX-4360] fixed trapper compilation error on FreeBSD 7.3 (dimir,asaveljevs)
A.F....... [ZBX-4249] fixed trigger wizard when inserting macro multiple times (Vedmak)